<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/requset"
        android:icon="@drawable/ic_request"
        android:iconTint="@color/white"
        android:title="@string/text_requests" />
    <item
        android:id="@+id/additional"
        android:icon="@drawable/ic_additional_work"
        android:iconTint="@color/white"
        android:title="@string/text_additional" />
    <item
        android:id="@+id/table"
        android:icon="@drawable/ic_table"
        android:iconTint="@color/white"
        android:title="@string/text_table" />
    <item
        android:id="@+id/complain"
        android:icon="@drawable/ic_complain"
        android:iconTint="@color/white"
        android:title="@string/text_complain" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/white"
        android:title="@string/text_profile" />
</menu>