<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:background="@drawable/starting_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/tv_id"
        android:layout_marginTop="16dp"
        android:background="@drawable/editext_background"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_one"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_two"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_three"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_four"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_five"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_six"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_seven"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eight"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nine"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_zero"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_remove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_round_rectangle_background"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_block"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_round_rectangle_background"
        android:gravity="center">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_lock_open"
            android:backgroundTint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_open_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_double_back"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_open_qr_code"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>